--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -14,11 +14,23 @@
     box-sizing: border-box;
 }
 .container {
+    column-count: 3;
+    gap: 25px;
+    /*
     display: grid;
     grid-template-columns:  repeat(auto-fill, minmax(350px, 1fr));  
-    grid-template-rows: 1fr;
-    gap: 25px;
-    align-items: start;
+    grid-template-rows: 500px 2fr repeat(2, minmax(345px, 1fr)) ;
+
+    align-items: start;*/
+}
+
+.container .brick {
+    margin-bottom: 30px;
+    display: inline-block;
+    vertical-align: top;
+}
+.line-break {
+    line-height: 2em;
 }
 
 .diagonal-left {    
@@ -30,14 +42,20 @@
 }
 
 
-.workgrid_item-a {
-    grid-column: span 2;
-    grid-row:1
+.col--2x {
+    grid-row-end: span 2;
+}
+.col--3x {
+   grid-row-end: span 3;
 }
 
-.green {
-    background-color: rgb(168, 235, 18);
-    color: #693a7d;
+.orange {
+    background-image: linear-gradient(to bottom, #fcaf34 5% , #E16F29 90%);
+    background-image: linear-gradient(62deg, #fcaf34 0%, #E16F29 100%);
+    background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+
+
+    color: #eeeeee;
     text-align: center;
     
     -webkit-box-shadow: 10px 10px 14px 1px rgb(0 0 0 / 20%);
@@ -47,8 +65,7 @@
 
 .aqua {
     color:#fff;
-    background-color: #00c9b7;
-    border-radius: 5px;    /*grid-row: 1/2;*/
+    background-color: #00c9b7; /*grid-row: 1/2;*/
 }
 
 
@@ -65,24 +82,29 @@
     height: auto;
     padding: 7px;
     border-radius: 10px;
+
 }
 
 .pink {
-    background: #56B870; 
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    background-image: linear-gradient(to bottom, #ff0091, #ff456f, #ff7653, #ffa145, #ffc84c, #ffd152, #fedb59, #fde461, #ffd558, #ffc651, #ffb74c, #ffa849);
+    
 }
 
-.blue {
-    grid-row: 1/2;
-    background-image: linear-gradient(to top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+.blue {   
+    background-image: linear-gradient(to bottom, #fafafa 30%, #1faed6  80%);    
+    color:#fff;
 }
 
 .red {
-    background: rgb(163,3,177);
-background: -moz-linear-gradient(8deg, rgba(163,3,177,1) 0%, rgba(255,0,153,1) 100%);
-background: -webkit-linear-gradient(8deg, rgba(163,3,177,1) 0%, rgba(255,0,153,1) 100%);
-background: linear-gradient(8deg, rgba(163,3,177,1) 0%, rgba(255,0,153,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a303b1",endColorstr="#ff0099",GradientType=1);
+    
+    background: linear-gradient(0deg, #920e23 20%, rgb(10 3 3) 80%);
+}
+
+.grey {
+    background-image: linear-gradient(to bottom, #ececec 30%, rgb(83 75 69) 80%);
+    
+    -webkit-box-shadow: 10px 10px 14px 1px rgb(0 0 0 / 20%);
+    box-shadow: 10px 10px 14px 1px rgba(00,00,00,0.08);
 }
 
 
